drkns 04.07.2020 12:52:29 +0100 - build 5633

1. gh-250: Use ArcLite for .apk and .aar by default

drkns 04.07.2020 02:32:19 +0100 - build 5632

1. C++20 warnings.

2. VS 2019 16.7 warnings.

3. Пара мелких оптимизаций форматирования размеров.

drkns 03.07.2020 02:42:42 +0100 - build 5631

1. Продолжение и углубление 5630.1:
   - Множественные критерии сортировки можно определять перманентно: Ctrl+F12, F4 на режиме, Ins/Del/CtrlUp/CtrlDown/CtrlR.
   - По умолчанию определены критерии, повторяющие предыдущее поведение.

2. Исправлены новые и старые баги с сохранением выделения при обновлении панели.

drkns 02.07.2020 01:07:47 +0100 - build 5630

1. Экспериментально:
   - В файловых панелях используется стабильная сортировка.
   - Критерии сортировки не используют имя файла в качестве запасного варианта.
   Что это значит:
   - Сортировка в панелях не изменяет текущий порядок эквивалентных элементов.
   Что это значит:
   - Различные критерии можно применять последовательно.
     Например:
     Ctrl+F5, Ctrl+F6 - сотрировать файлы по размеру, файлы одинакового размера - по времени записи.

2. Экспериментально:
   - Критерий "Имя" переименован в "Только имя".
   - Критерий "Полное имя" переименован в "Имя".
   В обычных панелях разницы нет, а работать будет быстрее.
   В плагиновых панелях это имеет больше смысла при отображении полных имён.

3. Оптимизация перечитывания папки.

4. Пара мелочей.

drkns 29.06.2020 20:22:06 +0100 - build 5629

1. Извлечение CD при включенной опции Panel.RememberLogicalDrives приводило к забавным эффектам.

drkns 27.06.2020 15:01:02 +0100 - build 5628

1. Уточнение 5627.

drkns 26.06.2020 22:44:22 +0100 - build 5627

1. С форума: Странный автовозврат предыдущей пометки фильтра пользователя после редактирования.

2. Рефакторинг.

drkns 24.06.2020 17:33:33 +0100 - build 5626

1. 0003804: Не работает опция "сохранять позицию файла" в редакторе и просмотрщике.

drkns 21.06.2020 22:47:28 +0100 - build 5625

1. Рефакторинг.
