@@ -1,3 +1,7 @@
+drkns 04.07.2020 13:30:24 +0100 - build 5634
+
+1. Уточнение 5598.
+
 drkns 04.07.2020 12:52:29 +0100 - build 5633
 
 1. gh-250: Use ArcLite for .apk and .aar by default
